@@ -1,4 +1,4 @@
-268fd53d33eba4e3f1ac9eb7fc55ab50 *DESCRIPTION
+e048b9d2c3451e6c357d2acd836b59e8 *DESCRIPTION
 728d5f99e6e336ba66f8fad081e5423b *NAMESPACE
 fdf231edcf933f4a3cf6390a1731873a *R/ARMAspec.R
 100cdfb3b0bda44e3dd18e2baf5f887b *R/BoxCox.ar.R
@@ -7,9 +7,9 @@ e791bca7d13b23fea8c958233181f33c *R/Keenan.test.R
 3741da580e6d1339f05ea2c5cfdca695 *R/McLeod.Li.test.R
 56366682119ed55d9611770c918904ac *R/Tsay.test.R
 cc31df4b6e9df49815d88b6635c8fd67 *R/acf.R
-54a5ad54b8221288b7216fd0955c1151 *R/arima.R
+7d21c677675bafc38e005ccb8347de20 *R/arima.R
 3f29e205fd90409f86304cc8fc6f9d6b *R/arima.boot.R
-813dbb71f2d94740d885fc58cef2f59e *R/arimax.R
+9cfba4b1a79f64af8b70a21865d9862d *R/arimax.R
 2823afda91db7076afa9688ff4b39a8a *R/armasubsets.R
 1dee7668e0474685bb122140270d9e2f *R/detectAO.R
 baf975212f18d09c997d00a6b48f75f3 *R/detectIO.R
@@ -40,7 +40,7 @@ d12397da7b2dab86c8ff08f3869f7ba7 *R/summary.armasubsets.R
 1250aaf8dd3933611165093711fae6c9 *R/tsdiag.Arima.R
 a60ebbac2deb972c52610700845fd5db *R/tsdiag.TAR.R
 44e2c6022468ca9cb8ea953da5bdcd9f *R/zlag.R
-dff0989326f7a35ab32bcb5ca334353b *changes
+b2acd6dd57988cfb1039e12dd7e10c50 *changes
 37913c817bb1f88cba830bb31529f8cd *data/CREF.rda
 b3b3b9b7cff4198bb224203513c07a70 *data/JJ.rda
 2945b5d4bd4f795987a3b1b68f9b0288 *data/SP.rda
@@ -102,7 +102,7 @@ a0425dcc911f2c4187835fb44bc2c6e5 *man/ARMAspec.Rd
 ba312d9f1576f045bb920e3249f0e41f *man/LB.test.Rd
 4604a2714dc1ad0dcfc717ef10456a65 *man/McLeod.Li.test.Rd
 ca3236a1ccc2be6c416e47208811b81a *man/SP.Rd
-fff18947f09941b235c8f0e9d022a8be *man/TSA-package.Rd
+6aac6738633bc35d61cde256d5c7130d *man/TSA-package.Rd
 248962239e003084fca241759ebff665 *man/Tsay.test.Rd
 fa7239240b6167539210d32f1adc523b *man/acf.Rd
 806dea61ae1fe0b2fa9a4c6f3a2cc176 *man/airmiles.Rd
