@@ -1,3 +1,12 @@
+11/12/2012:
+
+1. revised the arimax (arima) function by using the atanh transformation of the pacf, as implemented by stats:::arima.
+
+2. Function arimax defaults to stats:arima when io, xtransf and transfer are all missing. This speeds up the calculation.  
+
+3. Clear up some useless codes in arimax. 
+
+
 10/26/2012:
 
 1. revised versions of arima and arimax; fix the order of armafilter function so that the AR operators are applied first in order to avoid creating many NAs. 
